<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/side_padding"
    android:paddingRight="@dimen/side_padding"
    android:paddingTop="@dimen/top_padding">

    <EditText
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name" />

    <EditText
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_description"
        android:inputType="textMultiLine"
        android:lines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <LinearLayout
            android:id="@+id/ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_ingredient_material"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Material"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_ingredient_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingredient_quantity"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/et_ingredient_measurement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients"
        android:inputType="textMultiLine"
        android:lines="4"
        android:scrollbars="vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_instruction"
        android:inputType="textMultiLine"
        android:lines="7"
        android:scrollbars="vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_recipe" />
</LinearLayout>